css/styles.css
@charset "utf-8";

/* CSS Document */

body,
td,
th,
p {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 10pt;
  color: #333;
  line-height: 1.5;
}

body {
  background-color: #fdfdfd;
  margin: 0;
  position: relative;
}

ul,
li {
  font-family: Arial, Helvetica, sans-serif;
  color: #333;
  /* large screens */
  /* font-size: 10pt; */
}

a {
  color: orange;
  text-decoration: none;
}

a:hover,
a:focus {
  color: #3397db;
  text-decoration: none;
}

a img {
  border: none 0 #fff;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: Arial, Helvetica, sans-serif;
  margin: 0 0 20px;
}

article,
aside,
canvas,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
section {
  display: block;
}

#maincontent {
  background-color: #f3f3f3;
  min-height: 100%;
  /* padding-top: calc(80px + 51px); */
}

#footer {
  background-color: #444;
  color: #aaa;
  font-size: 8pt;
  letter-spacing: 1px;
  padding: 25px;
  text-align: center;
  text-transform: uppercase;
}

/* ====================== Navigation ====================== */

nav {
  display: flex;
  width: 100%;
  height: 80px;
  background-color: #252831;
  text-align: center;
}

nav h1 {
  margin: auto;
}

nav h1 a {
  color: #fff;
  font-size: 14pt;
  font-weight: 200;
  letter-spacing: 10px;
  text-transform: uppercase;
}

#breadcrumb {
  padding: 10px 40px 16px;
  list-style: none;
  background-color: #eee;
  font-size: 17px;
  margin: 0;
  /* large screens */
  /* font-size: 17px; */
  /* width: calc(50% - 80px); */
}

/* Display list items side by side */

#breadcrumb li {
  display: inline;
}

/* Add a slash symbol (/) before/behind each list item */

#breadcrumb li + li::before {
  padding: 8px;
  color: black;
  content: "/\00a0";
}

/* Add a color to all links inside the list */

#breadcrumb li a {
  color: #0275d8;
  text-decoration: none;
}

/* Add a color on mouse-over */

#breadcrumb li a:hover {
  color: #01447e;
  text-decoration: underline;
}

/* ====================== Map ====================== */

#map {
  height: 400px;
  width: 100%;
  background-color: #ccc;
}

/* ====================== Restaurant Filtering ====================== */

.filter-options {
  display: flex;
  flex-wrap: wrap;
  /* width: 100%; */
  max-width: 100%;
  padding: 10px;
  background-color: #3397db;
  align-items: center;
  /* large screens */
  /* height: 50px; */
}

.filter-options h2 {
  width: 100%;
  color: white;
  font-size: 2rem;
  font-weight: normal;
  line-height: 1;
  margin: 0 10px;
  /* large screens */
}

.filter-options select {
  background-color: white;
  border: 1px solid #fff;
  font-family: Arial, sans-serif;
  font-size: 11pt;
  height: 35px;
  letter-spacing: 0;
  margin: 10px;
  padding: 0 10px;
  flex: 1 1 auto;
  /* large screens */
  /* width: 200px; */
}

/* ====================== Restaurant Listing ====================== */

#restaurants-list {
  background-color: #f3f3f3;
  list-style: outside none none;
  margin: 0;
  padding: 30px 15px 60px;
  text-align: center;
}

#restaurants-list li {
  background-color: #fff;
  border: 2px solid #ccc;
  font-family: Arial, sans-serif;
  margin: 15px;
  min-height: 380px;
  padding: 0 30px 25px;
  text-align: left;
  /* 100% - padding - margin */
  width: calc(100% - 60px - 30px);
  /* large screens */
  /* width: 270px; */
}

#restaurants-list .restaurant-img {
  background-color: #ccc;
  display: block;
  margin: 0;
  max-width: calc(100% + 60px);
  min-height: 248px;
  min-width: 100%;
  left: -30px;
  position: relative;
  /* large screens */
  /* max-width: 100%; */
}

#restaurants-list li h1 {
  color: #f18200;
  font-family: Arial, sans-serif;
  font-size: 14pt;
  font-weight: 200;
  letter-spacing: 0;
  line-height: 1.3;
  margin: 20px 0 10px;
  text-transform: uppercase;
}

#restaurants-list p {
  margin: 0;
  font-size: 11pt;
}

#restaurants-list li a {
  background-color: orange;
  border-bottom: 3px solid #eee;
  color: #fff;
  display: inline-block;
  font-size: 10pt;
  margin: 15px 0 0;
  padding: 8px 30px 10px;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
}

/* ====================== Restaurant Details ====================== */

.inside header {
  position: relative;
  top: 0;
  width: 100%;
  z-index: 1000;
}

.inside #map-container {
  background: blue none repeat scroll 0 0;
  position: relative;
  height: 50vh;
  /* height: 87%; */
  /* position: fixed; */
  /* right: 0; */
  /* top: 80px; */
  /* width: 50%; */
}

.inside #map {
  background-color: #ccc;
  height: 100%;
  width: 100%;
}

.inside #footer {
  bottom: 0;
  position: absolute;
  /* large screens */
  /* width: 50%; */
}

#restaurant-name {
  color: #f18200;
  font-family: Arial, sans-serif;
  font-size: 20pt;
  font-weight: 200;
  letter-spacing: 0;
  margin: 15px 0 30px;
  text-transform: uppercase;
  line-height: 1.1;
}

#restaurant-img {
  width: 100%;
  /* large screens */
  /* width: 90%; */
}

#restaurant-address {
  font-size: 12pt;
  margin: 10px 0;
}

#restaurant-cuisine {
  background-color: #333;
  color: #ddd;
  font-size: 12pt;
  font-weight: 300;
  letter-spacing: 10px;
  margin: 0 0 20px;
  padding: 2px 0;
  text-align: center;
  text-transform: uppercase;
  width: 100%;
  /* large screens */
  /* width: 90%; */
}

#restaurant-container,
#reviews-container {
  border-bottom: 1px solid #d9d9d9;
  border-top: 1px solid #fff;
  padding: 30px 40px;
  /* large screens */
  /* padding: 140px 40px 30px; */
  /* width: 50%; */
}

#reviews-container {
  padding: 30px 40px 80px;
}

#reviews-container h2 {
  color: #f58500;
  font-size: 24pt;
  font-weight: 300;
  letter-spacing: -1px;
  padding-bottom: 1pt;
}

#reviews-list {
  margin: 0;
  padding: 0;
}

#reviews-list li {
  background-color: #fff;
  border: 2px solid #f3f3f3;
  display: block;
  list-style-type: none;
  margin: 0 0 30px;
  overflow: hidden;
  padding: 0 20px 20px;
  position: relative;
  border-radius: 20px 0;
  /* large screens */
  /* width: 85%; */
}

#reviews-list li header {
  align-items: center;
  background: #444;
  color: white;
  display: flex;
  justify-content: space-between;
  left: -20px;
  margin-bottom: 20px;
  padding: 10px 20px;
  position: relative;
  width: 100%;
  z-index: 0;
}

#reviews-list li h1 {
  font-size: 18px;
  margin: 0;
}

#reviews-list li time {
  margin: 0;
  color: #eee;
}

#reviews-list li span {
  background-color: crimson;
  color: white;
  font-weight: bold;
  padding: 8px;
  margin-bottom: 20px;
  border-radius: 4px;
  text-transform: uppercase;
}

#restaurant-hours td {
  color: #666;
}

